Bug #11766
SMB2 stops responding after LOGOFF
Start date:
Due date:
% Done:
0%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
When the last user logs off the SMB server puts the session into SHUTDOWN state which causes all subsequence requests to be dropped. This causes many of the Windows Protocol Test Suites SMB tests which often do SESSION SETUP and LOGOFF over and over again on the same connection to hang and timeout.
Updated by Andrew Stormont over 1 year ago
- Description updated (diff)
- Status changed from New to Feedback
- Assignee set to Andrew Stormont
Updated by Gordon Ross over 1 year ago
- Status changed from Feedback to Closed
This problem is fixed with #11832