11766 SMB2 stops responding after LOGOFF